apps/base/media/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
        - name: overseerr
          image: artifactory.local.hejsan.xyz/docker/linuxserver/overseerr:v1.33.2-ls119
          ports:
            - containerPort: 5055
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: overseerr-config-pvc
              mountPath: /config
      volumes:
        - name: overseerr-config-pvc
          persistentVolumeClaim:
            claimName: overseerr-config-pvc-overseerr-0
