apps/base/media/overseerr/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: overseerr
spec:
  serviceName: "overseerr"
  replicas: 1
  updateStrategy:
    type: OnDelete
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
        - name: overseerr
          image: artifactory.local.hejsan.xyz/docker/linuxserver/overseerr:v1.33.2-ls119@sha256:f63f746e4972ea6870b9c694bcc7a45fa94a88a70f3c3b054c112cd0fa932a36
          ports:
            - containerPort: 5055
              name: http
          volumeMounts:
            - name: overseerr-config-pvc
              mountPath: /config
  volumeClaimTemplates:
    - metadata:
        name: overseerr-config-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ${STORAGE_CLASS}
        resources:
          requests:
            storage: 2Gi
