apps/base/media/overseerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`overseerr.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: overseerr
          port: http

  tls:
    secretName: ${CERT_SECRET_INTERNAL}
